# developers-workstation-setup

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  ansible-install-os-packages.yml  linux-brew-packages.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
group_vars/all/: arch.yml  atom.yml  debian.yml  hashicorp.yml  homebrew.yml  python.yml  redhat.yml
