[tool.poetry]
name = "developers-workstation-setup"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "6.6.0"
cookiecutter = "^2.1.1"
pip-tools = "^6.3.0"
poetry = "^1.1.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = "6.8.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
